change translate position to fix navbar overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ header .contact a:hover {
     position: absolute;
     top: 0;
     right: 0;
-    transform: translateX(100%);
+    transform: translateY(100%);
     transition: transform 200ms ease;
   }
   #nav-links-container ul {
@@ -144,7 +144,7 @@ header .contact a:hover {
     flex-direction: column;
   }
   #nav-links-container.active {
-    transform: translateX(0);
+    transform: translateY(0);
   }
   #open-navbar, #close-navbar {
     display: block;
